--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
                     <img src="images/www.png" alt="Сайт">
                     <span>Играть на сайте</span>
                 </a>
-                <a href="https://t.me/LB_Hotspin_bot/app?startapp=bXN0PTB4Njg2MjRlNGImbT1Zb3VuZ2RhZCZjPVNFT0JPVFM" class="slider-btn btn-telegram">
+                <a href="https://t.me/Diamond_lucky_Bot/app?startapp=bXN0PTB4Njg2MjRlNGImbT1Zb3VuZ2RhZCZjPVNFT0JPVFM" class="slider-btn btn-telegram">
                     <img src="images/tgw.png" alt="Telegram">
                     <span>Играть в TG</span>
                 </a>
@@ -1005,7 +1005,7 @@
 
     <footer id="about" class="footer-section">
         <div class="container">
-            <a href="https://t.me/LB_Hotspin_bot/app?startapp=bXN0PTB4Njg2MjRlNGImbT1Zb3VuZ2RhZCZjPVNFT0JPVFM" class="footer-logo">
+            <a href="https://t.me/Diamond_lucky_Bot/app?startapp=bXN0PTB4Njg2MjRlNGImbT1Zb3VuZ2RhZCZjPVNFT0JPVFM" class="footer-logo">
                 <img src="images/logo.png" alt="Tower Rush Logo" style="height: 40px;">
             </a>
 
