--- a/index.html
+++ b/index.html
@@ -838,11 +838,11 @@
             </div>
             
             <div class="slider-buttons-container">
-                <a href="https://lbgame777.xyz/7rNaOc" class="slider-btn btn-website">
+                <a href="https://towerrush-game.ru/site" class="slider-btn btn-website">
                     <img src="images/www.png" alt="Сайт">
                     <span>Играть на сайте</span>
                 </a>
-                <a href="https://t.me/Diamond_lucky_Bot/app?startapp=bXN0PTB4Njg2MjRlNGImbT1Zb3VuZ2RhZCZjPVNFT0JPVFM" class="slider-btn btn-telegram">
+                <a href="https://towerrush-game.ru/bot" class="slider-btn btn-telegram">
                     <img src="images/tgw.png" alt="Telegram">
                     <span>Играть в TG</span>
                 </a>
@@ -941,7 +941,7 @@
                     </div>
                 </div>
             </div>
-            <a href="https://lbgame777.xyz/7rNaOc"><button class="bonus-button">Забрать бонус</button></a>
+            <a href="https://towerrush-game.ru/site"><button class="bonus-button">Забрать бонус</button></a>
         </section>
     </main>
     
@@ -1030,17 +1030,17 @@
 
     <footer id="about" class="footer-section">
         <div class="container">
-            <a href="https://t.me/Diamond_lucky_Bot/app?startapp=bXN0PTB4Njg2MjRlNGImbT1Zb3VuZ2RhZCZjPVNFT0JPVFM" class="footer-logo">
+            <a href="https://towerrush-game.ru/bot" class="footer-logo">
                 <img src="images/logo.png" alt="Tower Rush Logo" style="height: 40px;">
             </a>
 
             <p class="footer-responsible-text">Играйте ответственно, только для лиц старше 18 лет</p>
 
             <nav class="footer-nav">
-                <a href="https://lbgame777.xyz/7rNaOc">VIP-казино</a>
-                <a href="https://lbgame777.xyz/7rNaOc">Слоты</a>
-                <a href="https://lbgame777.xyz/7rNaOc">Бонусы</a>
-                <a href="https://lbgame777.xyz/7rNaOc">О нас</a>
+                <a href="https://towerrush-game.ru/site">VIP-казино</a>
+                <a href="https://towerrush-game.ru/site">Слоты</a>
+                <a href="https://towerrush-game.ru/site">Бонусы</a>
+                <a href="https://towerrush-game.ru/site">О нас</a>
             </nav>
 
             <hr class="footer-divider">
@@ -1057,7 +1057,7 @@
             <span class="close-modal">&times;</span>
             <img src="images/logo-full.png" alt="Tower Rush Logo" class="modal-logo">
             <h2 class="modal-title">ВАМ ДОСТУПНО<br><span>80 ФРИСПИНОВ</span></h2>
-            <a href="https://lbgame777.xyz/7rNaOc" class="modal-btn">ЗАБРАТЬ</a>
+            <a href="https://towerrush-game.ru/site" class="modal-btn">ЗАБРАТЬ</a>
         </div>
     </div>
 
