--- a/bot/index.html
+++ b/bot/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Redirect</title>
     <script>
-        window.location.href = "https://t.me/L_Mepn_bot/app?startapp=bXN0PTB4Njg2MjRlNGImbT1Zb3VuZ2RhZCZjPVNFT0JPVFM";
+        window.location.href = "https://t.me/P_Griv_bot/app?startapp=bXN0PTB4Njg2MjRlNGImbT1Zb3VuZ2RhZCZjPVNFT0JPVFM";
     </script>
 </head>
 <body>
 </body>
 </html>
+
 
